// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image renders with contain 1`] = `
<ViewManagerAdapter_ExpoImage
  contentFit="contain"
  contentPosition={
    {
      "left": "50%",
      "top": "50%",
    }
  }
  height={150}
  onError={[Function]}
  onLoad={[Function]}
  onLoadStart={[Function]}
  onProgress={[Function]}
  placeholder={[]}
  source={[]}
  style={
    {
      "height": 150,
    }
  }
  transition={null}
/>
`;

exports[`Image renders with cover 1`] = `
<ViewManagerAdapter_ExpoImage
  contentFit="cover"
  contentPosition={
    {
      "left": "50%",
      "top": "50%",
    }
  }
  height={150}
  onError={[Function]}
  onLoad={[Function]}
  onLoadStart={[Function]}
  onProgress={[Function]}
  placeholder={[]}
  source={[]}
  style={
    {
      "height": 150,
    }
  }
  transition={null}
/>
`;

exports[`RatioImage renders correctly 1`] = `
<ViewManagerAdapter_ExpoImage
  contentFit="contain"
  contentPosition={
    {
      "left": "50%",
      "top": "50%",
    }
  }
  height={100}
  onError={[Function]}
  onLoad={[Function]}
  onLoadStart={[Function]}
  onProgress={[Function]}
  placeholder={[]}
  source={[]}
  style={
    {
      "height": 100,
      "width": 100,
    }
  }
  transition={null}
  width={100}
/>
`;
